fixed blockentity menus